fixed align center footer for phone view finshing project

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -202,4 +202,7 @@ header .container{
 .item-image img{
   height:8rem;
 }
+footer{
+  text-align: center;
+}
 }
